# Kanillian

./: c_to_symtab.sh  dune  dune-project  esy.json  kanillian-c.sh
Gillian-C/lib/: CMemory.ml  MonadicSMemory.ml  SHeapTree.ml  cConstants.ml  gilgen.ml  parserAndCompiler.ml  valueTranslation.ml
Gillian-C/runtime/: binops_common.gil  dune  global_environment_common.gil  global_environment_common_symbolic.gil  stdlib_archi32_verif.gil  stdlib_archi64.gil
GillianCore/BulkTesting/: Runner.ml
GillianCore/CommandLine/: CommandLine.ml
GillianCore/GIL_Parser/: gil_parsing.ml
GillianCore/GIL_Syntax/: Annot.ml  Annot.mli  Cmd.ml  Expr.ml  Gil_syntax.mli  Location.ml  TypeDef__.ml
GillianCore/monadic/: FOSolver.ml  MonadicSMemory.ml  delayed.ml  delayed.mli
GillianCore/utils/: config.ml  execMode.ml
GillianCore/z3/: z3_encoding.ml
debugger-vscode-extension/src/: commands.ts  extension.ts
esy.lock/: index.json
kanillian/examples/: basic_se.c.symtab.json  basic_se.gil  basic_se_rust.gil  basic_se_rust.symtab.json  bool_test.c.symtab.json  bycopy.c  fcal.gil  (+6 more)
kanillian/lib/memory_model/: CMemory.ml  GEnv.ml  MonadicSMemory.ml  MonadicSVal.ml  SHeapTree.ml  SHeapTree.mli  SVal.ml  SVal.mli  dune  perm.ml
kanillian/runtime/: archi32_constants.gil  archi64_constants.gil  cbmc_runtime.gil  dune  global_environment_common_concrete.gil  internal_binops.gil  internal_casts.gil  internal_stdlib.gil  internal_unops.gil  internals.gil  stdlib_archi32_non_verif.gil  stdlib_archi64_non_verif.gil  stdlib_archi64_verif.gil  stdlib_non_verif.gil  stdlib_verif.gil  string.gil
(+72 files in other folders)
