(install
 (files archi32_constants.gil archi64_constants.gil
   genv_allocated_functions.gil genv_unallocated_functions.gil
   global_environment_common.gil internal_binops.gil internal_unops.gil
   internal_casts.gil internal_stdlib.gil internals.gil stdlib_non_verif.gil
   stdlib_verif.gil string.gil)
 (section share)
 (package kanillian))
